# systemaudio_to_wav

./: .gitignore  README.md  pyproject.toml
src/sysaudrec/: __init__.py  app.py  gui.py  paths.py  recorder.py
